# FalconOS-kernel

./: .gitignore  Makefile  grub.cfg
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs
crates/elf/: Cargo.toml
crates/elf/src/: lib.rs
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs
crates/hal/src/arch/: mod.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: allocator.rs  capability.rs  ipc.rs  lib.rs
crates/kernel/src/arch/: mod.rs
crates/kernel/src/arch/x86_64/: mod.rs  pic.rs  port.rs  qemu.rs
crates/kernel/src/arch/x86_64/interrupts/: mod.rs
crates/kernel/src/arch/x86_64/loader/: boot.asm  linker.ld  long_mode_init.asm
crates/kernel/src/arch/x86_64/memory/: mod.rs
crates/kernel/src/arch/x86_64/memory/paging/: entry.rs  mod.rs
crates/kernel/src/arch/x86_64/segmentation/: mod.rs  tss.rs
crates/kernel/src/arch/x86_64/tables/: gdt.rs  idt.rs  mod.rs
crates/kernel/src/bootstrap/: mod.rs
crates/kernel/src/debug/: mod.rs  vga_buffer.rs
crates/kernel/src/process/: mod.rs
crates/kernel/src/syscall/: mod.rs
crates/kernel/src/utils/: bits.rs  mod.rs  ring_buffer.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/multiboot/: Cargo.toml
crates/multiboot/src/: lib.rs
crates/multiboot/src/tags/: boot_loader_name.rs  command_line.rs  elf_sections.rs  header.rs  mod.rs  (+2 more)
crates/syscall/: Cargo.toml
crates/syscall/src/: _log.rs  cap.rs  ipc.rs  lib.rs  number.rs  process.rs
crates/tar/: Cargo.toml
crates/tar/src/: lib.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
(+2 files in other folders)
