[package]
name = "kernel"
version = "0.0.1"
authors = ["Sébastien Laclau <seb.laclau@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
elf = { path = "../elf" }
hal = { path = "../hal" }
macros = { path = "../macros" }
multiboot = { path = "../multiboot" }
syscall = { path = "../syscall" }
tar = { path = "../tar" }
lazy_static = { version = "1.5.0", features = ["spin", "spin_no_std"] }
spin = "0.10.0"
